--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -5,8 +5,9 @@
   .navbar {
     background-color: var(--navBg);
     height: 80px;
+    width:100vw;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   
@@ -35,7 +36,7 @@
   
   .nav-text {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0 8px 16px;
     list-style: none;
@@ -68,7 +69,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   
