--- a/client/src/styles/AdminView.css
+++ b/client/src/styles/AdminView.css
@@ -11,15 +11,20 @@
 }
 
 .div-structure {
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding: 20px;
   text-align: center;
-  background-color: #f2cac8;
-  width: 100%;
+  background-color: #f1f1f1;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+  width: 80%;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .div-selection {
