--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,5 +1,67 @@
-.content{
-    display: flex;
-    justify-content:center;
-    text-align: center;
+.navbar-admin {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.main-div {
+  width: 100%;
+}
+
+.about-container {
+  background-color: #f1f1f1;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+  margin: auto;
+  width: 80%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 4rem;
+  margin-bottom: 20px;
+  text-decoration: underline;
+}
+
+.about-feature {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.about-feature img {
+  width: 150px;
+  margin-right: 30px;
+}
+
+.about-feature h2 {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+.about-feature p {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  background-color: #0066cc;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.button:hover {
+  /* background-color: #004d99; */
 }
