--- a/client/src/styles/OutlineView.css
+++ b/client/src/styles/OutlineView.css
@@ -1,27 +1,60 @@
-.content{
-    text-align: center;
+#root {
+  /* width: 100%; */
+  /* width: 1000px; */
 }
-h1{
-    text-align: center;
+
+.div-root {
+  width: 100%;
+}
+
+.navbar-admin {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin-bottom: 0;
+}
+.content {
+  text-align: center;
+}
+
+.div-structure {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  background-color: #f1f1f1;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  margin-top: 0px;
+}
+
+h1 {
+  text-align: center;
 }
 
 .courses-flex {
-    display: flex;
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  }
-  
-  .courses-item {
-    background-color: #f1f1f1;
-    padding: 20px;
-    width: calc(33.33% - 5vw);
-    margin: 2vh 3vw 2vh 3vw;
-    border-radius: 5px;
-  }
+}
 
-  .courses-flex :hover{
-    background-color: rgb(203, 201, 201);
-    cursor: pointer;
-  }
+.courses-item {
+  background-color: #f1f1;
+  padding: 20px;
+  width: fit-content;
+  margin: 2vh 3vw 2vh 3vw;
+  border-radius: 5px;
+}
 
+.courses-flex :hover {
+  background-color: rgb(203, 201, 201);
+  cursor: pointer;
+}
