--- a/client/src/styles/OutlineView.css
+++ b/client/src/styles/OutlineView.css
@@ -1,8 +1,3 @@
-#root {
-  /* width: 100%; */
-  /* width: 1000px; */
-}
-
 .div-root {
   width: 100%;
 }
@@ -12,13 +7,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  margin-bottom: 0;
 }
 .content {
   text-align: center;
 }
 
-.div-structure {
+.div-struct {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -33,10 +27,6 @@
   margin: auto;
   text-align: center;
   margin-top: 0px;
-}
-
-h1 {
-  text-align: center;
 }
 
 .courses-flex {
