--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -25,6 +25,7 @@ h1 {
   font-size: 4rem;
   margin-bottom: 20px;
   text-decoration: underline;
+  color: rgb(57, 90, 130);
 }
 
 .about-feature {
@@ -60,8 +61,4 @@ h1 {
   border-radius: 5px;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
-}
-
-.button:hover {
-  /* background-color: #004d99; */
 }
