--- a/client/src/styles/OutlineView.css
+++ b/client/src/styles/OutlineView.css
@@ -11,13 +11,16 @@
 .content {
   text-align: center;
 }
+h1{
+  text-align: center;
+}
 
 .div-struct {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  text-align: center;
+  text-align: left;
   background-color: #f1f1f1;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -25,7 +28,6 @@
   padding-right: 60px;
   width: 80%;
   margin: auto;
-  text-align: center;
   margin-top: 0px;
 }
 
