--- a/client/src/styles/AdminView.css
+++ b/client/src/styles/AdminView.css
@@ -1,6 +1,22 @@
-#root {
-  display: flex;
-  justify-content: center;
+:root {
+  --primary-color: #3498db;
+  --secondary-color: #f1c40f;
+  --background-color: #f1f1f1;
+  --text-color: #333;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
 
 .navbar-admin {
@@ -10,177 +26,140 @@
   width: 100%;
 }
 
-.div-structure {
-  margin-top: 100px;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.body {
+  padding-top: 130px;
+}
+
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--primary-color);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.notification {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  /* text-align: center; */
-  background-color: #f1f1f1;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 60px;
-  padding-right: 60px;
-  width: 80%;
-  /* text-align: center; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.notification-content {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.notification-text {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.close-notification {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
   margin-bottom: 30px;
 }
 
-.div-selection {
+.form-field {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  padding-top: 30px;
-  width: 1200px;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
-.div-selection h2 {
-  font-size: 18px;
+.form-field label {
+  font-size: 1.2rem;
   font-weight: bold;
-  padding: 20px;
-  padding-top: 0;
-  padding-bottom: 0;
+  margin-bottom: 10px;
 }
 
-select {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 250px;
-  height: min-content;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-right: 20px;
+.form-field select {
+  height: 40px;
+  font-size: 1.2rem;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid var(--primary-color);
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
-button {
+.form-field select:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px var(--primary-color);
+}
+
+.form-field select option {
+  font-size: 1.2rem;
+}
+
+.course-button {
+  background-color: var(--secondary-color);
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  margin: 0 5px;
+  padding: 2px 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.course-button:hover {
+  background-color: #e67e22;
+}
+
+.btn {
   display: inline-block;
   padding: 10px 20px;
   font-size: 1.2rem;
   font-weight: bold;
-  background-color: #0066cc;
-  color: #fff;
-  border-radius: 5px;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-}
-
-.course-selection {
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-  background-color: #ebd559;
-}
-
-.instructor-selection {
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-  background-color: #ebd559;
-}
-
-.instructor-selection select {
-  width: 150px;
-}
-
-/*  */
-
-.information-structure {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* text-align: center; */
-  width: 100%;
-}
-
-.information {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px;
-  width: 1200px;
-  border: 1px solid black;
-  margin-top: 30px;
-}
-
-.information h2 {
-  font-size: 18px;
-  font-weight: bold;
-  padding: 20px;
-  padding-top: 0;
-  padding-bottom: 0;
   text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
 }
 
-.instructor-info {
-  width: 30%;
-  background-color: #fb948f;
-  padding: 50px;
-  padding-top: 0px;
-  padding-bottom: 20px;
+.btn:hover {
+  background-color: #2980b9;
 }
 
-.course-info {
-  width: 60%;
-  background-color: #fb948f;
-  padding: 50px;
-  padding-top: 0px;
-  padding-bottom: 20px;
-}
-
-@media (max-width: 1200px) {
-  /* .information {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 30px;
-  } */
-
-  .instructor-info {
-    width: 30%;
-    background-color: #fb948f;
-  }
-
-  .course-info {
-    width: 60%;
-    background-color: #fb948f;
-  }
-
-  .div-selection {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 30px;
-    width: 90%;
-  }
-}
-
-@media (max-width: 990px) {
-  .div-selection {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .instructor-selection {
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    background-color: #febb75;
-  }
-
-  .course-selection {
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    background-color: #febb75;
-    margin-top: 25px;
+@media screen and (max-width: 768px) {
+  .form {
+    grid-template-columns: 1fr;
   }
 }
